implemented Utils.dot with Panama vectors